--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     href="https://fonts.googleapis.com/css2?family=Nunito&display=swap"
     rel="stylesheet"
 />
+<link rel="preconnect" href="https://fonts.gstatic.com" />
+<link
+    href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap"
+    rel="stylesheet"
+/>
 <link rel="stylesheet" href="/style.css" />
 <link rel="shortcut icon" href="/leaf_logo.png" type="image/x-icon" />
 <script
